# Rag_lab_eyoub_beraki_de24

./: .funcignore  .gitignore  README.md  api.py  explorations.ipynb  host.json  ingestion.py  pyproject.toml  requirements.txt
Explorations/: explorations.ipynb
backend/: constants.py  data_models.py  rag.py
explorations/: explorations.ipynb
frontend/: app.py
