[project]
name = "rag-lab-eyoub-beraki-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "duckdb>=1.4.3",
    "fastapi>=0.124.2",
    "google-genai>=1.54.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pydantic-ai>=1.29.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
